// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cell > Cell groupVue demo works fine 1`] = `
<div>
  <!---->
  <div
    class="t-cell-group t-cell-group--card"
  >
    
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="app"
            >
              <g
                id="fill1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  fill="transparent"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  fill="transparent"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  fill="transparent"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                fill="transparent"
                id="fill2"
              />
              <g
                id="stroke1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                id="stroke2"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          <svg
            class="t-icon t-icon-service"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="service"
            >
              <g
                id="fill1"
              >
                <path
                  d="M3 12H7V18H5C3.89543 18 3 17.1734 3 16.1538V12Z"
                  fill="transparent"
                />
                <path
                  d="M21 12H17V18H19C20.1046 18 21 17.1734 21 16.1538V12Z"
                  fill="transparent"
                />
              </g>
              <path
                d="M10.25 21.5C10.25 21.0858 10.5858 20.75 11 20.75H13C13.4142 20.75 13.75 21.0858 13.75 21.5C13.75 21.9142 13.4142 22.25 13 22.25H11C10.5858 22.25 10.25 21.9142 10.25 21.5Z"
                fill="transparent"
                id="fill2"
              />
              <path
                d="M21 12V11C21 6.02944 16.9706 2 12 2C7.02944 2 3 6.02944 3 11V12M21 12H17V18H19C20.1046 18 21 17.1734 21 16.1538V12ZM3 12H7V18H5M3 12V16.1538C3 17.1734 3.89543 18 5 18M10.25 21.5H8C6.34315 21.5 5 20.1569 5 18.5V18M10.25 21.5C10.25 21.9142 10.5858 22.25 11 22.25H13C13.4142 22.25 13.75 21.9142 13.75 21.5C13.75 21.0858 13.4142 20.75 13 20.75H11C10.5858 20.75 10.25 21.0858 10.25 21.5Z"
                id="stroke1"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          <svg
            class="t-icon t-icon-internet"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="internet"
            >
              <path
                d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5229 6.47715 22 12 22C17.5228 22 22 17.5229 22 12C22 6.47715 17.5228 2 12 2Z"
                fill="transparent"
                id="fill1"
              />
              <path
                d="M11.4987 21.9877C11.6646 21.9959 11.8315 22 11.9994 22C12.1673 22 12.3342 21.9959 12.5 21.9877C17.113 16.2216 17.1129 7.77835 12.4999 2.01231C12.3341 2.00414 12.1672 2 11.9994 2C11.8315 2 11.6646 2.00414 11.4988 2.01231C6.88584 7.77835 6.88581 16.2216 11.4987 21.9877Z"
                fill="transparent"
                id="fill2"
              />
              <path
                d="M3 12H21M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5229 17.5228 22 12 22C6.47715 22 2 17.5229 2 12Z"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
              <path
                d="M11.4987 21.9877C11.6646 21.9959 11.8315 22 11.9994 22C12.1673 22 12.3342 21.9959 12.5 21.9877C17.113 16.2216 17.1129 7.77835 12.4999 2.01231C12.3341 2.00414 12.1672 2 11.9994 2C11.8315 2 11.6646 2.00414 11.4988 2.01231C6.88584 7.77835 6.88581 16.2216 11.4987 21.9877Z"
                id="stroke2"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Cell > Cell mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-45d5c39d=""
>
  <h1
    class="title"
    data-v-45d5c39d=""
  >
    Cell 单元格
  </h1>
  <p
    class="summary"
    data-v-45d5c39d=""
  >
    一行内容/功能的垂直排列方式。一行项目左侧为主要内容展示区域，右侧可增加更多操作内容
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-45d5c39d=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        单行单元格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        data-v-45d5c39d=""
      >
        <!---->
        <div
          class="t-cell-group t-cell-group--default t-cell-group--bordered"
        >
          
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <span
                  class="t-cell--required"
                >
                   *
                </span>
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  <!---->
                </div>
                <div
                  class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                >
                  16
                </div>
              </div>
              
            </div>
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-switch t-switch--medium t-switch--checked"
              >
                <div
                  class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
                >
                  <div
                    class="t-switch__label t-switch__label--medium t-switch__label--checked"
                  >
                    <!---->
                  </div>
                </div>
              </div>
              
            </div>
            <!---->
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="app"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        fill="transparent"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        fill="transparent"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        fill="transparent"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      id="stroke2"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-45d5c39d=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        多行单元格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        data-v-45d5c39d=""
      >
        <!---->
        <div
          class="t-cell-group t-cell-group--default"
        >
          
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <span
                  class="t-cell--required"
                >
                   *
                </span>
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  <!---->
                </div>
                <div
                  class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
                >
                  16
                </div>
              </div>
              
            </div>
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <div
              class="t-cell__note"
            >
              
              <div
                class="t-switch t-switch--medium t-switch--checked"
              >
                <div
                  class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
                >
                  <div
                    class="t-switch__label t-switch__label--medium t-switch__label--checked"
                  >
                    <!---->
                  </div>
                </div>
              </div>
              
            </div>
            <!---->
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <div
              class="t-cell__note"
            >
              辅助信息
            </div>
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="app"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        fill="transparent"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        fill="transparent"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        fill="transparent"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      id="stroke2"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                </svg>
                
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字，长文本自动换行，该选项的描述是一段很长的内容
              </div>
            </div>
            <!---->
            <!---->
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                
                <div
                  class="t-avatar__wrapper"
                >
                  <div
                    class="t-avatar__badge"
                  >
                    <div
                      class="t-badge"
                    >
                      <div
                        class="t-badge__content"
                      >
                        
                        <div
                          class="t-avatar t-avatar--medium t-avatar--circle"
                        >
                          <div
                            class="t-image t-image--square"
                          >
                            <div
                              class="t-image__mask"
                            >
                              <div
                                class="t-loading"
                                style="font-size: 20px;"
                              >
                                <div
                                  class="t-loading__dots"
                                  style="animation-duration: 800ms; width: 20px; height: 20px;"
                                >
                                  
                                  <div
                                    class="t-loading__dot"
                                    style="animation-duration: 0.8s; animation-delay: 0s;"
                                  />
                                  <div
                                    class="t-loading__dot"
                                    style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                                  />
                                  <div
                                    class="t-loading__dot"
                                    style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                                  />
                                  
                                </div>
                                <!---->
                                <!---->
                              </div>
                            </div>
                            <picture>
                              <!---->
                              <img
                                alt=""
                                class="t-image__img"
                                src="https://tdesign.gtimg.com/mobile/demos/avatar1.png"
                                style="object-fit: fill; object-position: center;"
                              />
                            </picture>
                          </div>
                        </div>
                        
                      </div>
                      <!---->
                    </div>
                  </div>
                </div>
                
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <!---->
              <img
                class="t-cell__left-image"
                src="https://tdesign.gtimg.com/mobile/demos/example4.png"
              />
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <div
                class="t-cell__description"
              >
                一段很长很长的内容文字
              </div>
            </div>
            <!---->
            <!---->
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-45d5c39d=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        卡片单元格
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        data-v-45d5c39d=""
      >
        <!---->
        <div
          class="t-cell-group t-cell-group--card"
        >
          
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                <svg
                  class="t-icon t-icon-app"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="app"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        fill="transparent"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        fill="transparent"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        fill="transparent"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <g
                      id="stroke1"
                    >
                      <path
                        d="M3 3H10V10H3V3Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M14 14H21V21H14V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                      <path
                        d="M3 14H10V21H3V14Z"
                        stroke="currentColor"
                        stroke-width="2"
                      />
                    </g>
                    <path
                      d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                      id="stroke2"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                <svg
                  class="t-icon t-icon-service"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="service"
                  >
                    <g
                      id="fill1"
                    >
                      <path
                        d="M3 12H7V18H5C3.89543 18 3 17.1734 3 16.1538V12Z"
                        fill="transparent"
                      />
                      <path
                        d="M21 12H17V18H19C20.1046 18 21 17.1734 21 16.1538V12Z"
                        fill="transparent"
                      />
                    </g>
                    <path
                      d="M10.25 21.5C10.25 21.0858 10.5858 20.75 11 20.75H13C13.4142 20.75 13.75 21.0858 13.75 21.5C13.75 21.9142 13.4142 22.25 13 22.25H11C10.5858 22.25 10.25 21.9142 10.25 21.5Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <path
                      d="M21 12V11C21 6.02944 16.9706 2 12 2C7.02944 2 3 6.02944 3 11V12M21 12H17V18H19C20.1046 18 21 17.1734 21 16.1538V12ZM3 12H7V18H5M3 12V16.1538C3 17.1734 3.89543 18 5 18M10.25 21.5H8C6.34315 21.5 5 20.1569 5 18.5V18M10.25 21.5C10.25 21.9142 10.5858 22.25 11 22.25H13C13.4142 22.25 13.75 21.9142 13.75 21.5C13.75 21.0858 13.4142 20.75 13 20.75H11C10.5858 20.75 10.25 21.0858 10.25 21.5Z"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            class="t-cell"
          >
            <div
              class="t-cell__left"
            >
              <div
                class="t-cell__left-icon"
              >
                <svg
                  class="t-icon t-icon-internet"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="internet"
                  >
                    <path
                      d="M12 2C6.47715 2 2 6.47715 2 12C2 17.5229 6.47715 22 12 22C17.5228 22 22 17.5229 22 12C22 6.47715 17.5228 2 12 2Z"
                      fill="transparent"
                      id="fill1"
                    />
                    <path
                      d="M11.4987 21.9877C11.6646 21.9959 11.8315 22 11.9994 22C12.1673 22 12.3342 21.9959 12.5 21.9877C17.113 16.2216 17.1129 7.77835 12.4999 2.01231C12.3341 2.00414 12.1672 2 11.9994 2C11.8315 2 11.6646 2.00414 11.4988 2.01231C6.88584 7.77835 6.88581 16.2216 11.4987 21.9877Z"
                      fill="transparent"
                      id="fill2"
                    />
                    <path
                      d="M3 12H21M2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5229 17.5228 22 12 22C6.47715 22 2 17.5229 2 12Z"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                    <path
                      d="M11.4987 21.9877C11.6646 21.9959 11.8315 22 11.9994 22C12.1673 22 12.3342 21.9959 12.5 21.9877C17.113 16.2216 17.1129 7.77835 12.4999 2.01231C12.3341 2.00414 12.1672 2 11.9994 2C11.8315 2 11.6646 2.00414 11.4988 2.01231C6.88584 7.77835 6.88581 16.2216 11.4987 21.9877Z"
                      id="stroke2"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
              <!---->
            </div>
            <div
              class="t-cell__title"
            >
              <div
                class="t-cell__title-text"
              >
                单行标题
                <!---->
              </div>
              <!---->
            </div>
            <!---->
            <div
              class="t-cell__right t-cell__right--middle"
            >
              <div
                class="t-cell__right-icon"
              >
                <svg
                  class="t-icon t-icon-chevron-right"
                  fill="none"
                  height="1em"
                  style="fill: none;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g
                    id="chevron-right"
                  >
                    <path
                      d="M9.5 17.5L15 12L9.5 6.5"
                      id="stroke1"
                      stroke="currentColor"
                      stroke-linecap="square"
                      stroke-width="2"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Cell > Cell multipleVue demo works fine 1`] = `
<div>
  <!---->
  <div
    class="t-cell-group t-cell-group--default"
  >
    
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <span
            class="t-cell--required"
          >
             *
          </span>
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            <!---->
          </div>
          <div
            class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
          >
            16
          </div>
        </div>
        
      </div>
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-switch t-switch--medium t-switch--checked"
        >
          <div
            class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
          >
            <div
              class="t-switch__label t-switch__label--medium t-switch__label--checked"
            >
              <!---->
            </div>
          </div>
        </div>
        
      </div>
      <!---->
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <div
        class="t-cell__note"
      >
        辅助信息
      </div>
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="app"
            >
              <g
                id="fill1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  fill="transparent"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  fill="transparent"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  fill="transparent"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                fill="transparent"
                id="fill2"
              />
              <g
                id="stroke1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                id="stroke2"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
          </svg>
          
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字，长文本自动换行，该选项的描述是一段很长的内容
        </div>
      </div>
      <!---->
      <!---->
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          
          <div
            class="t-avatar__wrapper"
          >
            <div
              class="t-avatar__badge"
            >
              <div
                class="t-badge"
              >
                <div
                  class="t-badge__content"
                >
                  
                  <div
                    class="t-avatar t-avatar--medium t-avatar--circle"
                  >
                    <div
                      class="t-image t-image--square"
                    >
                      <div
                        class="t-image__mask"
                      >
                        <div
                          class="t-loading"
                          style="font-size: 20px;"
                        >
                          <div
                            class="t-loading__dots"
                            style="animation-duration: 800ms; width: 20px; height: 20px;"
                          >
                            
                            <div
                              class="t-loading__dot"
                              style="animation-duration: 0.8s; animation-delay: 0s;"
                            />
                            <div
                              class="t-loading__dot"
                              style="animation-duration: 0.8s; animation-delay: 0.26666666666666666s;"
                            />
                            <div
                              class="t-loading__dot"
                              style="animation-duration: 0.8s; animation-delay: 0.5333333333333333s;"
                            />
                            
                          </div>
                          <!---->
                          <!---->
                        </div>
                      </div>
                      <picture>
                        <!---->
                        <img
                          alt=""
                          class="t-image__img"
                          src="https://tdesign.gtimg.com/mobile/demos/avatar1.png"
                          style="object-fit: fill; object-position: center;"
                        />
                      </picture>
                    </div>
                  </div>
                  
                </div>
                <!---->
              </div>
            </div>
          </div>
          
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <img
          class="t-cell__left-image"
          src="https://tdesign.gtimg.com/mobile/demos/example4.png"
        />
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <div
          class="t-cell__description"
        >
          一段很长很长的内容文字
        </div>
      </div>
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Cell > Cell singleVue demo works fine 1`] = `
<div>
  <!---->
  <div
    class="t-cell-group t-cell-group--default t-cell-group--bordered"
  >
    
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <span
            class="t-cell--required"
          >
             *
          </span>
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-badge"
        >
          <div
            class="t-badge__content"
          >
            <!---->
          </div>
          <div
            class="t-badge--basic t-badge--medium t-badge--circle t-badge--count t-has-count"
          >
            16
          </div>
        </div>
        
      </div>
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-cell__note"
      >
        
        <div
          class="t-switch t-switch--medium t-switch--checked"
        >
          <div
            class="t-switch__dot t-switch__dot--medium t-switch__dot--checked t-switch__dot--plain"
          >
            <div
              class="t-switch__label t-switch__label--medium t-switch__label--checked"
            >
              <!---->
            </div>
          </div>
        </div>
        
      </div>
      <!---->
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <!---->
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-cell__note"
      >
        辅助信息
      </div>
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="t-cell"
    >
      <div
        class="t-cell__left"
      >
        <div
          class="t-cell__left-icon"
        >
          <svg
            class="t-icon t-icon-app"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="app"
            >
              <g
                id="fill1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  fill="transparent"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  fill="transparent"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  fill="transparent"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                fill="transparent"
                id="fill2"
              />
              <g
                id="stroke1"
              >
                <path
                  d="M3 3H10V10H3V3Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M14 14H21V21H14V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
                <path
                  d="M3 14H10V21H3V14Z"
                  stroke="currentColor"
                  stroke-width="2"
                />
              </g>
              <path
                d="M21.5 6.5C21.5 8.70914 19.7091 10.5 17.5 10.5C15.2909 10.5 13.5 8.70914 13.5 6.5C13.5 4.29086 15.2909 2.5 17.5 2.5C19.7091 2.5 21.5 4.29086 21.5 6.5Z"
                id="stroke2"
                stroke="currentColor"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
        <!---->
      </div>
      <div
        class="t-cell__title"
      >
        <div
          class="t-cell__title-text"
        >
          单行标题
          <!---->
        </div>
        <!---->
      </div>
      <!---->
      <div
        class="t-cell__right t-cell__right--middle"
      >
        <div
          class="t-cell__right-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            style="fill: none;"
            viewBox="0 0 24 24"
            width="1em"
          >
            <g
              id="chevron-right"
            >
              <path
                d="M9.5 17.5L15 12L9.5 6.5"
                id="stroke1"
                stroke="currentColor"
                stroke-linecap="square"
                stroke-width="2"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;
